# PDFreducer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  NAS-Docker-Deployment-Guide.md  README.md  docker-compose.yml  pdfreducer-remote  pyproject.toml
pdfreducer/: __init__.py  cli.py
pdfreducer/core/: __init__.py  image_optimizer.py  options.py  reducer.py  text_extractor.py
pdfreducer/web/: __init__.py  app.py  queue.py
pdfreducer/web/static/: app.js  index.html  styles.css
tests/: __init__.py
